# rtumirea-pcs-kr2-search-engine

./: CMakeLists.txt  Dockerfile  README.md
data/: test_data.txt
src/: main.cpp
src/FileReader/: FileReader.cpp  FileReader.h
src/Indexer/: Indexer.cpp  Indexer.h
src/InvertedIndex/: InvertedIndex.cpp  InvertedIndex.h
src/Searcher/: Searcher.cpp  Searcher.h
src/Tokenizer/: Tokenizer.cpp  Tokenizer.h
src/app/: main.cpp
src/core/: FileReader.cpp  FileReader.h  Indexer.cpp  Indexer.h  InvertedIndex.cpp  InvertedIndex.h  Searcher.cpp  Searcher.h  Tokenizer.cpp  Tokenizer.h
src/core/config/: SearchConfig.h
src/core/factory/: IModuleFactory.h  ModuleFactory.cpp  ModuleFactory.h
src/core/interfaces/: IFileReader.h  IIndexer.h  IInvertedIndex.h  ISearcher.h  ITokenizer.h
src/core/model/: SearchResult.h
src/gui/: MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt  test_filereader.cpp  test_indexer.cpp  test_inverted_index.cpp  test_searcher.cpp  test_tokenizer.cpp
tests/e2e/: 01_happy_path.cpp  02_empty_directory.cpp  03_fuzzy_typo.cpp  04_multi_token.cpp
